# agent-study

RAGUdemy/: README.md  pyproject.toml  requirements.txt
RAGUdemy/0-DataIngestParsing/: 1-dataIngestion.ipynb  2-PDFParsing.ipynb  3-dataPasingDocx.ipynb  4-csvExcelParsing.ipynb  5-jsonParsing.ipynb  6-databaseParsing.ipynb
RAGUdemy/1-VectorEmbeddingAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
RAGUdemy/10-Agentic Rag/: 1-agenticrag.ipynb  2-ReAct.ipynb  3-AgenticRAG.ipynb  internal_docs.txt
RAGUdemy/11-Autonomous RAG/: 1-COTR.ipynb  2-Selfreflection.ipynb  3-QueryPlanningdecomposition.ipynb  4-Iteratieveretrieval.ipynb  5-answersynthesis.ipynb
RAGUdemy/2-VectorStores/: 1-chromadb.ipynb  2-faiss.ipynb  3-othervectorstrores.ipynb  4-Datastaxdb.ipynb  5-PineconeDB.ipynb
RAGUdemy/3-AdvancedChunking/: 1-sematicchunking.ipynb
RAGUdemy/4-HybridSearchStategies/: 1-denseSparse.ipynb  2-reranking.ipynb  3-mmr.ipynb
RAG性能调优/: pyproject.toml
RAG性能调优/10-混合检索/: 10.ipynb
RAG性能调优/11-SQ8量化压缩/: 11.ipynb
RAG性能调优/12-查询扩展/: 12.ipynb
RAG性能调优/12-查询扩展/data/: 上海城市概览.md  上海迪士尼乐园.md  不同城市最佳旅游时间指南.md  北京火锅推荐.md  适合亲子游的主题公园推荐.md
RAG性能调优/13-假设文档增强/: 13.ipynb
RAG性能调优/14-多路召回/: 14.ipynb
RAG性能调优/16-RAG评估/: 16.ipynb
RAG性能调优/17-注意力权重分配/: 17.ipynb  17.py
RAG性能调优/18-事实验证链/: 18.ipynb  1_llamaindex_minimal.py  2_langchain.py
RAG性能调优/19-LoRA大模型微调/: 1-datas.py  19.ipynb
RAG性能调优/20-Adapter微调/: 20.ipynb  adapter.py
RAG性能调优/21-上下文融合prompt/: 21.ipynb  动态上下文注入.py
RAG性能调优/22-多模型路由/: 22.ipynb  quick_intelligent_test.py  simple_gateway.py
RAG性能调优/23-记忆网络/: 23.ipynb  data.txt  long_prompt.py
RAG性能调优/24-端到端流程/: 24.ipynb
RAG性能调优/25-Agentic RAG/: 25.ipynb  AgenticRAG.py
RAG性能调优/25-Agentic RAG/data/: crag.txt  kgrag.txt  selfrag.txt
RAG性能调优/26-MultiAgent/: 1.py  26.ipynb  MultiAgent.py
RAG性能调优/27-智能选择工具/: 27.ipynb  Gumbel-Softmax.py
RAG性能调优/28-长期记忆/: 28.ipynb
RAG性能调优/28-长期记忆/src/: main.py
RAG性能调优/28-长期记忆/src/core/: memory_retriever.py  memory_storage.py  memory_vector.py
RAG性能调优/28-长期记忆/src/models/: memory_transformer.py
RAG性能调优/29-动态任务规划/: 29.ipynb  htn.py
RAG性能调优/3-术语词库/: hybrid_search_doc.txt  sample_tech_doc.txt  术语词库.ipynb
RAG性能调优/30-OCR+LLM/: 30.ipynb
RAG性能调优/30-OCR+LLM/src/: README.md  app.py  requirements.txt
RAG性能调优/31-跨模态Embedding/: 31.ipynb
RAG性能调优/31-跨模态Embedding/src/: README.md  app.py  requirements.txt
RAG性能调优/33-Milvus图像搜索/: 33.ipynb
RAG性能调优/34-CRAG纠正性检索增强/src/: crag.py  requirements.txt
RAG性能调优/4-滑动窗口+关键词/: 1-评测-Token切片.py  2-评测-句子切片.py  3-评测-句子窗口切片.py  4-评测-句子滑动窗口切片.py  5-评测-语义切分.py  6-评测-滑动窗口+关键词语义切片.py
RAG性能调优/5-动态切片与重叠机制/: 5.ipynb
RAG性能调优/6-OCR/: 6.ipynb
RAG性能调优/6-OCR/output/: general_ocr_002_res.json
RAG性能调优/7-OCR2/: 7.ipynb
RAG性能调优/7-OCR2/output/: layout_result.json
RAG性能调优/7-OCR2/output-2/: res.json
RAG性能调优/7-OCR2/output-3/: table_recognition_res.json
RAG性能调优/7-OCR2/output-5/: table_recognition_res.json
RAG性能调优/8-自动化处理PDF/: 8.ipynb
RAG性能调优/8-自动化处理PDF/src/: config.yaml  dify_module.py  main.py  metadata_module.py  ocr_module.py  processor_module.py
RAG性能调优/8-自动化处理PDF/src/output/: example_res.json
RAG性能调优/9-向量检索引擎/: 9.ipynb
(+38 files in other folders)
