[project]
name = "learningrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "addict>=2.4.0",
    "dashscope>=1.25.15",
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "hnswlib>=0.8.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "llama-index>=0.14.19",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-llms-openai>=0.7.4",
    "llama-index-retrievers-bm25>=0.7.1",
    "llama-index-vector-stores-faiss>=0.6.0",
    "llama-index-vector-stores-milvus>=1.1.0",
    "matplotlib>=3.10.8",
    "memory-profiler>=0.61.0",
    "paddleocr>=3.4.0",
    "paddlepaddle==3.3.0",
    "pandas<3.0.0",
    "pip>=26.0.1",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.4.0",
    "unstructured[md]>=0.22.6",
]
